fix footer links alignment for mobile, adjust hero h1 and text size and line-height

--- a/style.css
+++ b/style.css
@@ -200,10 +200,11 @@ li a:hover {
 
 @media all and (max-width: 567px) {
 	.hero h1 {
-		font-size: 3rem;
+		font-size: 3.2rem;
+		line-height: 0.975;
 	}
 	.hero p {
-		font-size: 1.8rem;
+		font-size: 1.75rem;
 		line-height: 2.25rem;
 		width: 100%;
 		padding-top: 15px;
@@ -570,12 +571,12 @@ footer {
   .flex-row {
 	display: flex;
 	flex-wrap: wrap;
-	  justify-content: center;
-	  list-style: none;
-	  padding-top: 28px;					
+	justify-content: center;
+	list-style: none;
+	padding-top: 28px;					
   }
   
-  li {
+  .flex-row li {
 	margin: 0 20px;
 	/* margin-bottom: 16px;
 	margin-left: 20px; */
@@ -621,10 +622,18 @@ footer {
 	.footer a {
 		font-size: 5px;
 	}
+	.flex-row {
+		display:flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.footer-nav-link{
+		padding: 2rem 0;
+	}
 	.footer-icon-link i {
 		font-size: 2.5rem;
 		margin-bottom: 20px;
-		padding: 0;
+		padding: 10px 0;
 	}
 }
   
